= master

* Make typecast_params.convert! handle explicit nil values the same as missing values (jeremyevans)

= 3.38.0 (2020-11-16)

* Make error_email and error_mail plugins rescue invalid parameter errors when preparing the email body (jeremyevans)

= 3.37.0 (2020-10-16)

* Add custom_matchers plugin, for supporting arbitrary objects as matchers (jeremyevans)

= 3.36.0 (2020-09-14)

* Add multi_public plugin, for serving files from multiple public directories (jeremyevans)

* Support report-to directive in the content_security_policy plugin (jeremyevans)

* Add Vary response header when using type_routing plugin with Accept request header to prevent caching issues (jeremyevans)

= 3.35.0 (2020-08-14)

* Add r plugin for r method for accessing request, useful when r local variable is not in scope (jeremyevans)

* Warn when loading a plugin with arguments or a block if the plugin does not accept arguments or block (jeremyevans)

= 3.34.0 (2020-07-14)

* Remove unnecessary conditionals (jeremyevans)

* Allow loading the match_affix plugin with a single argument (jeremyevans)

* Do not include pre/post context sections if empty in the exception_page plugin (jeremyevans)

= 3.33.0 (2020-06-16)

* Add :brotli option to public plugin to supplement it to serve brotli-compressed files like :gzip does for gzipped files (hmdne) (#194)

* Add url method to path plugin, similar to path but returning the entire URL (jeremyevans)

= 3.32.0 (2020-05-15)

* Make :dependencies option in assets plugin work correctly with render plugin template caching (jeremyevans) (#191)

* Support render method :dependencies option for specifying which files to check for modification (jgarth, jeremyevans) (#192)

* Add each_partial to the partials plugin for rendering a partial for each element in an enumerable (jeremyevans)

* Make render_each in render_each plugin handle template names with directories and extensions (jeremyevans)

= 3.31.0 (2020-04-15)
