@@ -2,7 +2,8 @@ $:.unshift(File.expand_path("../lib", File.dirname(__FILE__)))
 
 if ENV['WARNING']
   require 'warning'
-  Warning.ignore([:missing_ivar, :method_redefined], File.dirname(File.dirname(__FILE__)))
+  Warning.ignore(:missing_ivar, File.dirname(File.dirname(__FILE__)))
+  Warning.ignore(%r{gems/(mail|hanna-nouveau|minjs)-\d})
   Warning.dedup if Warning.respond_to?(:dedup)
 end
 
